// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";

package metanotes.api;

message Scribble {
  string id = 1;
  oneof body {
    string text_body = 3;
    bytes binary_body = 4;
  }
  map<string, string> props = 5;
}

message GetScribbleRequest {
  string id = 1;
}

message GetScribbleReply {
  Scribble scribble = 1;
}

message GetAllMetadataReply {
  repeated Scribble scribble = 1;
}

message SetScribbleRequest {
  Scribble scribble = 1;
}

message RemoveScribbleRequest {
  string id = 1;
}

message GetScribblesByTextSearchRequest {
  string query = 1;
}

message GetScribblesByTextSearchReply {
  message SearchResult {
    string id = 1;
    string snippet = 2;
  }
  repeated SearchResult result = 1;
}

service Metanotes {
  rpc GetScribble(GetScribbleRequest) returns (GetScribbleReply) {}
  rpc SetScribble(SetScribbleRequest) returns (google.protobuf.Empty) {}
  rpc RemoveScribble(RemoveScribbleRequest) returns (google.protobuf.Empty) {}

  rpc GetAllMetadata(google.protobuf.Empty) returns (GetAllMetadataReply) {}
  rpc GetScribblesByTextSearch(GetScribblesByTextSearchRequest) returns (GetScribblesByTextSearchReply) {}
}
